# Fisi

./: .gitignore  CMakeLists.txt  README.md
qml/: main.qml
src/: program.cpp
